# deopenchat

./: .gitignore  Cargo.toml  README.md
common/src/: lib.rs
contract/src/: Deopenchat.sol
deopenchat-bridge/: Cargo.toml
deopenchat-bridge/src/: main.rs
deopenchat-gateway/: Cargo.toml
deopenchat-gateway/src/: main.rs  metadata.rs
deopenchat-prover/: Cargo.toml
deopenchat-prover/src/: lib.rs
deopenchat-zkcircuit/: Cargo.toml
deopenchat-zkcircuit/guest/: Cargo.toml
deopenchat-zkcircuit/guest/src/: main.rs
