[workspace]
resolver = "2"
members = [
    "deopenchat-gateway",
    "deopenchat-prover",
    "deopenchat-zkcircuit",
    "deopenchat-zkcircuit/guest",
    "common",
    "deopenchat-bridge",
]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes.git", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek.git", tag = "curve25519-4.1.2-risczero.0" }
