[package]
name = "deopenchat-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
common = { path = "../common"}
deopenchat-prover = { path = "../deopenchat-prover"}
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.9" }
log = "0.4"
log4rs = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = {version =  "0.26", default-features = false}
cacache = { version = "*", default-features = false, features = ["tokio-runtime", "mmap"] }
ed25519-dalek = "2"
alloy = {version = "0.8", features = ["contract", "signer-local"]}
risc0-ethereum-contracts = "1.2.0"
futures-util = "0.3"